<resources>

    <string name="app_name">RESOLVE PATRIMÔNIO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>

    <string name="Intro1">Cadastramento e Recadastramento</string>
    <string name="Intro1Descricao">Cadastramento e Recadastramento mais eficiente e eficaz</string>
    <string name="Intro2">Parâmetros Configurados pelo Usuário</string>
    <string name="Intro2Descricao">o Sistema possui ainda alguns parâmentro quer podem ser configurado pelo usuario</string>
    <string name="Intro3">Recadastramento com Rapidez</string>
    <string name="Intro3Descricao"> </string>
    <string name="Intro4">Monte seu cadastro</string>
    <string name="Intro4Descricao">Faça seu cadstro e começe a cadastra agora </string>

    <string name="Aviso_1">Não é possível carregar Secretaria: </string>
    <string name="Aviso_2">Não é possível carregar Centro Custo: </string>
    <string name="Aviso_3">Não e possivel carregar Ceentro Custo Local Reponsavel: </string>
    <string name="Aviso_4">Não é possível carregar Localização: </string>
    <string name="Aviso_5">Não é possível carregar Responsavel: </string>
    <string name="Aviso_6">Não é possível carregar Item: </string>
    <string name="Aviso_7">Não é possível carregar Fabricante: </string>
    <string name="Aviso_8">Não é possível carregar Tipo do Tombo: </string>
    <string name="Aviso_9">Não é possível carregar Estado Conservação: </string>

    <string name="Aviso_Retrofit1">Não e Possivel Conectar ao Servidor!</string>

    <string name="Nav1">Inicio</string>
    <string name="Nav2">Consulta</string>
    <string name="Nav3">Tombamento</string>
    <string name="Nav4">Exportação Web</string>
    <string name="Nav5">Sicronização Org</string>
    <string name="Nav6">Organização</string>
    <string name="Nav7">Comunicação</string>
    <string name="Nav8">Sobre</string>
    <string name="Nav9">Sair</string>
    <string name="Nav10">Configurações</string>

    <string name="Titulo1">Itens a Serem Tombados</string>
    <string name="Titulo2">Itens Tombados</string>
    <string name="Titulo3">Cadastro de Bem</string>
    <string name="Titulo4">Secretarias</string>
    <string name="Titulo5">Centro Custos/Departamentos</string>
    <string name="Titulo6">Localizações</string>
    <string name="Titulo7">Responsaveis</string>
    <string name="Titulo8">Configurações</string>
    <string name="Titulo9">Pesquisa</string>
    <string name="Titulo10">Item</string>
    <string name="Titulo11">Fabricante</string>
    <string name="Titulo12">Tipo Tombo</string>
    <string name="Titulo13">Estado de Conservação</string>

    <string name="Permissao1">Para Ultilizar este app e necessário aceitar todas as permissões !</string>

    <string name="Mensagem1">Nº Plaqueta ou Descrição</string>
    <string name="Mensagem2">Gostaria Realmente de Excluir?</string>
    <string name="Mensagem3">Gostaria Continua Cadastrando?</string>
    <string name="Mensagem4">Gostaria de Fecha?</string>
    <string name="Mensagem5">Gostaria de continua cadastrando?</string>
    <string name="Mensagem6">Plaqueta não encontrada</string>

    <string name="Mensagem8">Exportação de Bens</string>
    <string name="Mensagem9">Total de Itens Exportados </string>
    <string name="Mensagem10">Falha ao Enviar todos os Itens !</string>
    <string name="Mensagem11">Preparando Exportação</string>
    <string name="Mensagem12">Escanei uma plaqueta</string>
    <string name="Mensagem13">Não Possui Bens Cadastrados</string>

    <string name="Alerta1">Permissões Necessárias</string>
    <string name="Alerta2">Excluir</string>
    <string name="Alerta3">Carregando</string>
    <string name="Alerta4">Carregando Bens....</string>
    <string name="Alerta5">Carregando Bens....</string>

    <string name="Erro_Cadastro1">Preencha todos os campos!</string>
    <string name="Erro_Cadastro2">Informe nº da Plaqueta</string>
    <string name="Erro_Cadastro3">Informe uma Especificação</string>
    <string name="Erro_Cadastro4">Informe um Valor</string>
    <string name="Erro_Cadastro5">Informe uma Observação</string>
    <string name="Erro_Cadastro6">Necessário Tira a Foto 1 e Foto 2</string>
    <string name="Erro_Cadastro7">Necessário Tira a Foto 1</string>
    <string name="Erro_Cadastro8">Necessário Tira a Foto 2</string>
    <string name="Erro_Cadastro9">Preencha Todos os Campos!</string>

    <string name="Erro_Dialog_Exporta1">Nenhum Item Selecionado !</string>
    <string name="Erro_Dialog_Exporta2">Necessario Permissão para Exportar!</string>
    <string name="title_activity_mapa_localizacao">Map</string>
    <string name="title_activity_configuracao">Configuracao</string>

</resources>